--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 libyaml = "0.2"
 anyhow = "1.0"
 clap = { version = "4.3.24", features = ["derive"] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_yaml = "0.9.25"
